<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
    </group>

    <item android:title="Community">
        <menu>
            <item
                android:id="@+id/nav_com_forum"
                android:icon="@drawable/ic_people"
                android:title="@string/menu_com_forum" />
            <item
                android:id="@+id/inviteFragment"
                android:icon="@drawable/ic_person_add"
                android:title="@string/menu_com_person_add" />
            <item
                android:id="@+id/nav_com_links"
                android:icon="@drawable/ic_link"
                android:title="@string/menu_com_links" />
        </menu>
    </item>
</menu>