<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.animeteka.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_elementFragment"
            app:destination="@id/elementFragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.animeteka.ui.gallery.GalleryFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.animeteka.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/elementFragment"
        android:name="com.example.animeteka.ui.element.ElementFragment"
        android:label="@string/title_fragment_label"
        tools:layout="@layout/fragment_element" >
        <argument
            android:name="titleId"
            app:argType="integer" />
    </fragment>
</navigation>